2010-04-19  BVK Chaitanya  <bvk.groups@gmail.com>

	Fix emu build with grub-emu-pci and grub-emu-modules.

	* include/grub/util/misc.h: Export grub_util_{info,error,warn}
	functions.
	* include/grub/libpciaccess.h: New file.
	* conf/any-emu.rmk: Update kernel headers for emu build.

2010-04-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* fs/udf.c (grub_udf_iterate_dir): Silence a spurious warning.

2010-04-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* fs/udf.c (grub_udf_iterate_dir): Decode the Unicode filenames.

2010-04-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* boot/sparc64/ieee1275/boot.S: Various size-reducing changes.
	Retrieve chosen/bootpath if bootpath isn't hardcoded.
	* conf/sparc64-ieee1275.rmk (grub_setup_SOURCES): Add
	util/ieee1275/ofpath.c.
	* util/sparc64/ieee1275/grub-ofpathname.c: Renamed to ...
	* util/ieee1275/grub-ofpathname.c: ... this. All users updated
	* include/grub/sparc64/ieee1275/boot.h
	(GRUB_BOOT_MACHINE_KERNEL_SECTOR): Renamed to ...
	(GRUB_BOOT_MACHINE_KERNEL_BYTE): ...this. Moved 8 bytes lower.
	* util/hostdisk.c (grub_util_biosdisk_get_osdev): New function.
	* util/ieee1275/ofpath.c (grub_util_devname_to_ofpath): Make argument
	const char *.
	* util/sparc64/ieee1275/grub-setup.c (compute_dest_ofpath): Removed.
	(setup): Use KERNEL_BYTE instead of KERNEL_SECTOR.
	Use grub_util_devname_to_ofpath. Zero-fill boot_devpath on same disk
	install.

2010-04-18  Grégoire Sutre  <gregoire.sutre@gmail.com>

	* util/grub-mkconfig.in: Corrected two == equality tests.
	Set grub_prefix as in grub-install for NetBSD and OpenBSD.
	* configure.ac: All definitions and uses of TARGET_IMG_LDFLAGS_AC now
	expect a number appended to it.
	* acinclude.m4 (grub_PROG_OBJCOPY_ABSOLUTE): ${TARGET_IMG_LDFLAGS_AC}
	expects a number appended to it.

2010-04-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* po/POTFILES: Renamed multiboot_loader.c to multiboot.c

2010-04-18  Vladimir Serbinenko  <phcoder@gmail.com>
